I haven't slept in one day

--- a/Old-Record-Store/Old-Record-Store.WebApp/Old-Record-Store.WebApp.csproj
+++ b/Old-Record-Store/Old-Record-Store.WebApp/Old-Record-Store.WebApp.csproj
@@ -1,12 +1,28 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <RootNamespace>Old_Record_Store.WebApp</RootNamespace>
+    <UserSecretsId>8f706074-7eb5-4e94-a67e-e30c054d80ea</UserSecretsId>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.0.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.0.0" />
+  </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Old-Record-Store-DataAccess\Old-Record-Store-DataAccess.csproj" />
+    <ProjectReference Include="..\Old-Record-Store.Library\Old-Record-Store.Library.csproj" />
   </ItemGroup>
 
 </Project>
