I can go to sleep now, good night

--- a/Old-Record-Store/Old-Record-Store.WebApp/Old-Record-Store.WebApp.csproj
+++ b/Old-Record-Store/Old-Record-Store.WebApp/Old-Record-Store.WebApp.csproj
@@ -18,6 +18,8 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.0.0" />
+    <PackageReference Include="NLog" Version="4.6.7" />
+    <PackageReference Include="NLog.Config" Version="4.6.7" />
   </ItemGroup>
 
   <ItemGroup>
