--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,3 +16,28 @@ steps:
 - script: cd Old-Record-Store
           dotnet build --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
+
+  #have recordstore test proect
+  #script: dotnet test
+  #displayName: dotnet test
+  #workingDirectory: RestaurantReview
+- task: DotNetCoreCLI@2
+  inputs:
+    command: 'test'
+    projects: './Old-Record-Store'
+
+
+- task: AzureRmWebAppDeployment@4
+  inputs:
+    ConnectionType: 'AzureRM'
+    azureSubscription: 'Free Trial(7b6b20dd-8eaa-42bc-be67-56cb3efa9f4f)'
+    appType: 'webApp'
+    WebAppName: 'kinkyshaming42069'
+    packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.zip'
+
+- task: DotNetCoreCLI@2
+  displayName: dotnet publish + zip
+  inputs:
+    command: 'publish'
+    publishWebProjects: true
+    zipAfterPublish: true
