--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,6 +13,10 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
+
+
+
+
 - script: cd Old-Record-Store
           dotnet build --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
@@ -21,6 +25,16 @@ steps:
   #script: dotnet test
   #displayName: dotnet test
   #workingDirectory: RestaurantReview
+
+- task: SonarCloudAnalyze@1
+
+
+- task: SonarCloudPublish@1
+  displayName: Publish SonarCloud quality gate result
+  inputs:
+    pollingTimeoutSec: '300'
+
+
 - task: DotNetCoreCLI@2
   displayName: dotnet publish + zip
   inputs:
