--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,6 +15,7 @@ variables:
 steps:
 
 - task: SonarCloudPrepare@1
+  displayName: SonarCloud
   inputs:
     SonarCloud: 'sonarcloud-josefarro'
     organization: '13021302lol'
