--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,6 +22,7 @@ steps:
     scannerMode: 'MSBuild'
     projectKey: 'josefarro.123'
     projectName: 'record store'
+#    extraProperties: sonar.exclusions 
 
 
 - script: cd Old-Record-Store
