--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,6 +22,8 @@ steps:
     scannerMode: 'MSBuild'
     projectKey: 'josefarro.123'
     projectName: 'record store'
+
+
 #    extraProperties: sonar.exclusions 
 
 - script: dotnet build --configuration $(buildConfiguration)
@@ -49,4 +51,9 @@ steps:
     appType: 'webApp'
     WebAppName: 'kinkyshaming42069'
     packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.zip'
+
+- task: SonarCloudAnalyze@1
+  displayName: Run code analysis
+- task: SonarCloudPublish@1
+  displayName: Publish code analysis
 
